minor cleanup: new Integer() -> Integer.valueOf(), ditto for Float & Double classes as well.
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@6379 51baf565-9d33-0410-a72c-fc3788e3496d